<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".Register1">

    <TextView
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r1hello"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:fontFamily="monospace"
        android:layout_marginBottom="5dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:text="@string/r1please"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:fontFamily="monospace"
        android:layout_marginBottom="15dp"/>




    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/r1name"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimary"/>



    <EditText
        android:id="@+id/emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/r1email"
        android:paddingTop="30dp"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="text"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimary"/>



    <EditText
        android:id="@+id/phno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rphone1"
        android:ems="10"
        android:inputType="text"
        android:paddingTop="30dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimary"/>
    />


    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/r1adr"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimary"/>
    />


    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/round_button"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/r1NEXT"
        android:textColor="@color/background"
        android:textSize="22sp" />


</LinearLayout>