<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".NewUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30dp"
        android:fontFamily="monospace"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        android:textSize="30dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        />


    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/round_button"
        android:fontFamily="monospace"
        android:text="@string/signup"
        android:textColor="@color/background"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:textSize="30dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:layout_marginTop="50dp"

        />


    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/round_button"
        android:fontFamily="monospace"
        android:text="@string/signin"

        android:textColor="@color/background"
        android:textSize="22sp" />


</LinearLayout>