<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pname"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/gradientColor"
        android:textSize="20dp"
        />


    <TextView
        android:id="@+id/name"
        android:layout_width="184dp"
        android:layout_height="54dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="40dp"
        android:hint="name"
        android:textColor="@color/gradientColor"
        android:textSize="20dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:text="@string/pcontact"

        android:textColor="@color/gradientColor"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/ph_no"
        android:layout_width="181dp"
        android:layout_height="59dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="120dp"
        android:hint="number"
        android:textColor="@color/gradientColor"
        android:textSize="20dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/pemail"
        android:textColor="@color/gradientColor"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="181dp"
        android:layout_height="73dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="200dp"
        android:hint="email"
        android:textColor="@color/gradientColor"
        android:textSize="20dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ptag"
        android:textSize="25dp"

        android:textColor="@color/gradientColor"
        android:layout_marginTop="430dp"
        android:gravity="center"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="100dp"
    android:backgroundTint="@color/gradientColor"
        android:textColor="#ffffff"
        android:background="@drawable/round_button"
        android:id="@+id/yes"
        android:text="@string/pyes"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="250dp"
        android:backgroundTint="@color/gradientColor"
        android:textColor="#ffffff"
        android:background="@drawable/round_button"
        android:id="@+id/no"
        android:text="@string/pno"/>




</RelativeLayout>
