<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gradientColor"
        android:text="To,"
        android:layout_marginTop="36dp"
        />

    <EditText
        android:id="@+id/txtTo"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gradientColor"
        android:text="shwetalishimangaud@gmail.com"
        android:layout_marginTop="72dp"
       />

    <EditText
        android:id="@+id/txtSub"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:textColor="#ffffff"
        android:background="@color/gradientColor"
        android:hint="@string/subject"
        android:textColorHint="#ffffff"
     />

    <EditText
        android:id="@+id/txtMsg"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="250dp"
        android:layout_weight="1"
        android:hint="@string/problem"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:background="@color/gradientColor"
        android:gravity="top"
        />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="100dp"
        android:background="@drawable/round_button"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="450dp"
        android:textColor="#ffffff"
        android:backgroundTint="@color/gradientColor"
        android:text="@string/send"
         />
</RelativeLayout>